--- a/netflix/src/components/listItem/listItem.scss
+++ b/netflix/src/components/listItem/listItem.scss
@@ -42,6 +42,46 @@
             bottom: 0;
             background-color: rgb(0, 0, 0, 0.7);
             font-size: 12px;
+
+            .top{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 5px;
+            }
+
+            .icons {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                margin-bottom: 3px;
+
+                .icon {
+                    display: block;
+                    border: 2px solid white;
+                    border-radius: 50%;
+                    padding: 2px;
+                    font-size: 30px;
+                }
+            }
+
+            .itemInfoTop {
+                display: flex;
+                align-items: center;
+                color: gray;
+                gap: 10px;
+
+                .limit {
+                    display: block;
+                    border: 1px solid gray;
+                    padding: 2px;
+                }
+            }
+
+            .genre {
+                color: gray;
+                margin-top: 5px;
+            }
         }
     }
 }
