--- a/netflix/src/components/listItem/listItem.scss
+++ b/netflix/src/components/listItem/listItem.scss
@@ -42,8 +42,9 @@
             bottom: 0;
             background-color: rgb(0, 0, 0, 0.7);
             font-size: 12px;
+            width: 100%;
 
-            .top{
+            .top {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
@@ -70,6 +71,7 @@
                 align-items: center;
                 color: gray;
                 gap: 10px;
+                background-color: red;
 
                 .limit {
                     display: block;
