splide & some css errors solved

--- a/netflix/src/components/listItem/listItem.scss
+++ b/netflix/src/components/listItem/listItem.scss
@@ -71,6 +71,7 @@
                 align-items: center;
                 color: gray;
                 gap: 10px;
+                margin-right: 5px;
 
                 .limit {
                     display: block;
