--- a/netflix/src/components/featured/featured.scss
+++ b/netflix/src/components/featured/featured.scss
@@ -40,6 +40,8 @@
 
         img {
             width: 400px;
+            max-height: 200px;
+            object-fit: cover;
         }
 
         .desc {
